src/patterns/content-halves/_content-halves.scss
/*********************************/
/* BEGIN Pattern: content-halves */
/*********************************/

/* remove margin of h2 when it's the first element of the content */

.content h2, .content h3, .content h3:nth-child(1), .content h4:nth-child(1) {
    margin-top: 0;
}

section.sta-grey-light {
	background-color: $sta-grey-light;
}

.course table {
	margin-bottom: 20px;
	table-layout: fixed;
}

.course table tr {
	vertical-align: top;
}

@media (max-width: 600px) {
	.course table {
		table-layout: auto;
	}
}
/*********************************/
/* END Pattern: content-halves   */
/*********************************/

